[tool.poetry]
name = "advanced machine learning"
version = "0.1.0"
description = ""
authors = ["bswji <104555111+bswji@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
